# OpenBFSTM

./: AudioPlaybackManager.cpp  AudioPlaybackManager.h  BfFile.cpp  BfFile.h  BfstmFile.cpp  BfstmFile.h  CMakeLists.txt  DSPADPCMCodec.h  InMemoryResource.h  MemoryResource.cpp  MemoryResource.h  README.md  Window.cpp  Window.h  main.cpp
bfgrp/: BfgrpFile.h  BfgrpReader.cpp  BfgrpReader.h  BfgrpStructs.h
bfsar/: BfsarReader.cpp  BfsarReader.h  BfsarStructs.h
bfstm/: BfstmFile.cpp  BfstmFile.h  BfstmReader.cpp  BfstmReader.h
codec/: DspADPCM.cpp  DspADPCM.h
format/bfgrp/: BfgrpReader.cpp  BfgrpReader.h  BfgrpStructs.h  BfgrpWriter.cpp  BfgrpWriter.h
format/bfsar/: BfsarReader.cpp  BfsarReader.h  BfsarStructs.h  BfsarWriter.cpp  BfsarWriter.h
format/bfstm/: BfstmFile.cpp  BfstmFile.h  BfstmReader.h
format/bfstp/: BfstpReader.cpp  BfstpReader.h
format/bfwar/: BfwarReader.cpp  BfwarReader.h  BfwarStructs.h  BfwarWriter.cpp  BfwarWriter.h
format/bfwav/: BfwavReader.cpp  BfwavReader.h  BfwavStructs.h
format/bfwsd/: BfwsdReader.cpp  BfwsdReader.h  BfwsdStructs.h
playback/: ALSAPlayback.cpp  ALSAPlayback.h  AudioPlayback.cpp  AudioPlayback.h  DummyPlayback.h  PipeWirePlayback.cpp  PipeWirePlayback.h  PlaybackFunctions.cpp  PlaybackFunctions.h
specs/: BFSAR.md  COMMON.md
